verify/tests/cases/errors/wend_without_while.b
REM Test: WEND without matching WHILE (should fail)
x% = 1
WEND
